--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="/assets/img/myself.jpg" alt="myself">
+            <img src="./assets/img/myself.jpg" alt="myself">
             <div class="about-me">
                 <h1>denis ivankov</h1>
                 <h2>About me</h2>
@@ -30,29 +30,29 @@
                     <section class="contacts">
                         <h2>Contacts</h2>
                         <ul class="ul1">
-                            <li><img src="/assets/img/adress.png" alt="img">Minsk, Belarus</li>
-                            <li><img src="/assets/img/phone.png" alt="img">+375447165122</li>
-                            <li><img src="/assets/img/mail.png" alt="img">den-ivankov@mail.ru</li>
-                            <li><img src="/assets/img/vk.png" alt="img">id528343624</li>
-                            <li><img src="/assets/img/icons8-discord-48.png" alt="img">denivankov#4077</li>
+                            <li><img src="./assets/img/adress.png" alt="img">Minsk, Belarus</li>
+                            <li><img src="./assets/img/phone.png" alt="img">+375447165122</li>
+                            <li><img src="./assets/img/mail.png" alt="img">den-ivankov@mail.ru</li>
+                            <li><img src="./assets/img/vk.png" alt="img">id528343624</li>
+                            <li><img src="./assets/img/icons8-discord-48.png" alt="img">denivankov#4077</li>
                         </ul>
                     </section>
                     <section class="skills">
                         <h2>Skills</h2>
                         <ul class="ul2">
-                            <li><img src="/assets/img/check.png" alt="check">HTML5</li>
-                            <li><img src="/assets/img/check.png" alt="check">CSS</li>
-                            <li><img src="/assets/img/check.png" alt="check">Git</li>
-                            <li><img src="/assets/img/check.png" alt="check">Adobe Photoshop</li>
-                            <li><img src="/assets/img/check.png" alt="check">CorelDRAW</li>
+                            <li><img src="./assets/img/check.png" alt="check">HTML5</li>
+                            <li><img src="./assets/img/check.png" alt="check">CSS</li>
+                            <li><img src="./assets/img/check.png" alt="check">Git</li>
+                            <li><img src="./assets/img/check.png" alt="check">Adobe Photoshop</li>
+                            <li><img src="./assets/img/check.png" alt="check">CorelDRAW</li>
                         </ul>
                     </section>
                     <section class="languages">
                         <h2>Langues</h2>
                         <ul class="ul3">
-                            <li><img src="/assets/img/russia.png" alt="russia">Russian (native)</li>
-                            <li><img src="/assets/img/england.png" alt="england">English (A1)</li>
-                            <li><img src="/assets/img/france.png" alt="france">French (B2)</li>
+                            <li><img src="./assets/img/russia.png" alt="russia">Russian (native)</li>
+                            <li><img src="./assets/img/england.png" alt="england">English (A1)</li>
+                            <li><img src="./assets/img/france.png" alt="france">French (B2)</li>
 
                         </ul>
                     </section>
@@ -88,9 +88,9 @@
             </aside>
         </div>
         <footer>
-            <a href="https://github.com/DenIvankov"><img src="/assets/img/github.png" alt="github"> <span>My GitHub</span></a>
-            <div><img class="copyright" src="/assets/img/Copyright.png" alt="Copyright">2021</div>
-            <a href="https://rs.school/js/"><img class="rs_school" src="/assets/svg/rs_school_js.svg" alt="rs_school"></a>
+            <a href="https://github.com/DenIvankov"><img src="./assets/img/github.png" alt="github"> <span>My GitHub</span></a>
+            <div><img class="copyright" src="./assets/img/Copyright.png" alt="Copyright">2021</div>
+            <a href="https://rs.school/js/"><img class="rs_school" src="./assets/svg/rs_school_js.svg" alt="rs_school"></a>
         </footer>
     </div>
 </body>
