--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="about-me">
                 <h1>denis ivankov</h1>
                 <h2>About me</h2>
-                <p class="p1">I am responsible, quickly learn new information, resistant to stress. Extremely motivated for career change goal.</p>
+                <p class="p1">I'm responsible, quickly learn new information, resistant to stress. Extremely motivated for career change goal.</p>
             </div>
 
         </header>
